--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "babel-loader": "^9.2.1",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
