--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "clean": "rm -rf node_modules && rm package-lock.json",
     "start": "webpack serve --open",
     "build": "webpack",
-    "test": "jest"
+    "test": "jest",
+    "deploy": "gh-pages -d public"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +22,7 @@
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "babel-loader": "^9.2.1",
+    "gh-pages": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
     "webpack": "^5.96.1",
