Configure output and paths

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "homepage": "https://dianameca.com/flow",  
   "scripts": {
     "clean": "rm -rf node_modules && rm package-lock.json",
     "start": "webpack serve --open",
